코딩애플 js level 2-5 ~ 2-7

--- a/coding_apple/Level2/main-1.css
+++ b/coding_apple/Level2/main-1.css
@@ -47,3 +47,15 @@
 .slide-down {
   transform: translateY(0px);
 }
+.slide-box {
+  width: 100vw;
+  float: left;
+}
+.slide-container {
+  width: 300vw;
+  /*왼쪽으로 이동시키는 css 속성*/
+  transition: transform 1s;
+}
+.slide-box img {
+  width: 100%;
+}
