코딩애플 js level 2-8 슬라이드 next, before 수정 필요(동작 오류 존재)

--- a/coding_apple/Level2/main-1.css
+++ b/coding_apple/Level2/main-1.css
@@ -59,3 +59,14 @@
 .slide-box img {
   width: 100%;
 }
+.slide-next {
+  /*position: absolute를 쓰려면 부모 div에 position relative가 필요*/
+  position: absolute;
+  top: 45%;
+  right: 0;
+}
+.slide-before {
+  position: absolute;
+  top: 45%;
+  left: 0;
+}
