--- a/Review/style.css
+++ b/Review/style.css
@@ -220,3 +220,33 @@ body {
   top: 90%;
   left: 45%;
 }
+/*slider*/
+.slider {
+  margin: 10px auto;
+  width: 80%;
+}
+.img-box {
+  position: relative;
+  bottom: 25px;
+}
+.img-box img {
+  width: 100%;
+}
+.slider-button {
+  position: absolute;
+  top: 75%;
+  left: 25%;
+}
+.btn {
+  border: none;
+  outline: none;
+  background: #888;
+  padding: 5px;
+  font-size: 5px;
+  color: #ddd;
+  cursor: pointer;
+  margin: 1px auto;
+}
+.btn:hover {
+  background: #ddd;
+}
