--- a/coding_apple/Level2/main-1.css
+++ b/coding_apple/Level2/main-1.css
@@ -3,11 +3,25 @@
   background-size: cover;
   color: white;
   border-radius: 0;
+  /* position: relative;
+  top: 60px; */
+  height: 500px;
+}
+.main-background h1,
+p {
+  position: relative;
+  top: 15%;
+  left: 10%;
+}
+.main-background a {
+  position: relative;
+  left: 65%;
+  top: 20%;
 }
 .black-background {
   background: rgba(0, 0, 0, 0.5);
   position: fixed;
-  z-index: 5;
+  z-index: 1;
   width: 100%;
   height: 100%;
   display: block;
@@ -26,6 +40,23 @@
   justify-content: space-between;
   padding: 15px;
   align-items: center;
+  background-color: transparent;
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  color: white;
+}
+.nav-black {
+  /*최종화면*/
+  background: white;
+  color: black;
+}
+.large-logo {
+  font-size: 30px;
+  transition: all 0.5; /*모든 css 변경 시 애니메이션 효과*/
+}
+.small-logo {
+  font-size: 18px;
 }
 .nav-sub {
   display: none;
