버튼 클릭 시 글자가 나오는 애니메이션 구현

--- a/Review/style3.css
+++ b/Review/style3.css
@@ -2,7 +2,11 @@
   width: 80%;
   height: 80%;
 }
-.BoxTitle {
+.BoxTitle1 {
+  font-size: 30px;
+  text-align: center;
+}
+.BoxTitle2 {
   font-size: 30px;
   text-align: center;
 }
