--- a/Review/style.css
+++ b/Review/style.css
@@ -60,60 +60,77 @@ body {
   outline: 0;
 }
 /*로그인 모달창 끝*/
-.navbar {
+.navbar-front-menu {
+  position: relative;
+  bottom: 30px;
+  left: 75%;
+}
+.navbar-front-menu a {
+  font-size: 12px;
+  margin: 10px;
+  cursor: pointer;
+}
+.navbar-All {
   display: flex;
   justify-content: space-between;
-  padding: 15px;
+  padding: 10px;
   align-items: center;
-  background-color: #3c2f2f;
+  background-color: #c5c6d0;
   z-index: 2;
   width: 100%;
-  height: 80px;
-  color: white;
+  height: 120px;
+  color: #564c42;
   transition: all 1s;
 }
 .navbar-brand {
+  color: #564c42;
+  font-weight: bold;
+  font-size: 35px;
+}
+.navbar-back-menu a {
+  margin-top: 30px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+#nav-menu-coffee:hover {
+  background: #3c2f2f;
   color: white;
-  font-weight: bold;
+  height: 100px;
 }
-/*navbar 변경된 화면*/
-.navbar-change {
-  background: white;
-  color: #3c2f2f;
-  height: 50px;
-  transition: all 1s; /*모든 css 변경 시 애니메이션 효과*/
-}
-.navbar-brand-change {
-  color: #6f4237;
-  font-weight: bold;
-}
-.menu-list {
+
+/*navbar 목록 나오기*/
+.menu-list-coffee {
   display: none;
   position: relative;
-  left: 1290px;
+  top: 100px;
+  display: flex;
+  justify-content: center;
+  background: #3c2f2f;
+  color: white;
+  height: 450px;
+  z-index: 2;
+}
+.menu-list-coffee li {
+  list-style: none;
 }
 .menu-list-item {
-  list-style: none;
-  border-radius: 5px;
-  padding: 5px;
-  margin-right: 20px;
-  margin-bottom: 5px;
-  text-align: center;
-  width: 200px;
-  height: 35px;
-  border: 1px solid #6f4237;
+  font-weight: bold;
+  margin: 50px;
 }
-.menu-list-item:hover {
-  background: #6f4237;
-  color: white;
-  border: 0;
-  outline: 0;
+.menu-sub-list {
+  position: relative;
+  top: 85px;
+  right: 180px;
 }
+.menu-sub-list li {
+  margin: 30px;
+}
+/*navbar 목록 나오기*/
 .main-background {
-  background-image: url(coffee-shop.jpg);
+  background-image: white;
   background-size: cover;
-  height: 420px;
-  color: white;
+  height: 760px;
+  color: black;
   font-weight: bold;
   border-radius: 0;
 }
